
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:background="@color/main_background"
    tools:context=".MainActivity" >
    
<LinearLayout    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center" >

    <TextView
      android:text="@string/welcome_msg"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp"
      android:typeface="serif"
      android:textColor="@color/main_welcome_msg" />
    
    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/gen_error_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gen_error_label" />

    <Button
        android:id="@+id/sudoku_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sudoku_label" />

    <Button
        android:id="@+id/dictionary_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_label" />
    
    <Button
        android:id="@+id/wordgame_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wordgame_title_label" />
    
    <Button
        android:id="@+id/communication_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/communication_title_label" />
    
    <Button
        android:id="@+id/two_player_wordgame_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_player_wordgame_title_label" />
    
    <Button
        android:id="@+id/trickiest_part_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trickiest_part_title_label" />
    
    <Button
        android:id="@+id/final_proj_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_proj_title_label" />
    
    <Button
        android:id="@+id/quit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_label" />

</LinearLayout>
</ScrollView>