<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:background="@color/wordgame_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
          android:text="@string/wordgame_title_label"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_marginBottom="25dip"
          android:textSize="24.5sp"
          android:typeface="serif"
          android:layout_gravity="center"
          android:textColor="@color/wordgame_title" />
        
        <Button
            android:id="@+id/wordgame_newgame_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wordgame_newgame" />

        <Button
            android:id="@+id/wordgame_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wordgame_continue" />

        <Button
            android:id="@+id/wordgame_ack_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wordgame_ack" />
        
        <Button
            android:id="@+id/wordgame_instructions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wordgame_instructions_title" />
        
        <Button
            android:id="@+id/wordgame_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wordgame_settings" />
        
        <Button
            android:id="@+id/wordgame_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wordgame_return" />
      
    </LinearLayout>
    
</ScrollView>