<?xml version="1.0" encoding="UTF-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/final_proj_bg"
    android:orientation="vertical"
    android:padding="10dip" >

    <edu.neu.madcourse.dushyantdeshmukh.utilities.MyTextView
        android:id="@+id/final_proj_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:text="@string/final_proj_tutorial"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/final_proj_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@null"
                android:contentDescription="@string/final_proj_prev"
                android:src="@drawable/final_proj_previous"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/final_proj_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@null"
                android:contentDescription="@string/final_proj_next"
                android:src="@drawable/final_proj_next" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@id/final_proj_next"
                android:layout_toRightOf="@id/final_proj_prev" >

                <edu.neu.madcourse.dushyantdeshmukh.utilities.MyTextView
                    android:id="@+id/final_proj_step1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_proj_step1" />

                <edu.neu.madcourse.dushyantdeshmukh.utilities.MyTextView
                    android:id="@+id/final_proj_step2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_proj_step2"
                    android:visibility="gone" />

                <edu.neu.madcourse.dushyantdeshmukh.utilities.MyTextView
                    android:id="@+id/final_proj_step3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_proj_step3"
                    android:visibility="gone" />

                <edu.neu.madcourse.dushyantdeshmukh.utilities.MyTextView
                    android:id="@+id/final_proj_step4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_proj_step4"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <edu.neu.madcourse.dushyantdeshmukh.utilities.MyButton
            android:id="@+id/final_proj_back"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/final_proj_back_to_menu" />

        <edu.neu.madcourse.dushyantdeshmukh.utilities.MyButton
            android:id="@+id/final_proj_skip_tutorial"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/final_proj_skip_tutorial" />

        <edu.neu.madcourse.dushyantdeshmukh.utilities.MyButton
            android:id="@+id/final_proj_practice"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/final_proj_practice"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>